--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,8 @@
 
         <activity android:name=".Compiler"/>
         <activity android:name=".Glossary"/>
+        <activity android:name=".TableGrid"/>
+
     </application>
 
 </manifest>
