--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
         <activity android:name=".Compiler"/>
         <activity android:name=".Glossary"/>
         <activity android:name=".TableGrid"/>
+        <activity android:name=".ViewPagerMain"/>
 
     </application>
 
