main activity re-format

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,7 +21,7 @@
             </intent-filter>
         </activity>
 
-        <activity android:name=".Compiler"/>
+        <activity android:name=".Compiler" android:windowSoftInputMode="stateVisible"/>
         <activity android:name=".Glossary"/>
         <activity android:name=".TableGrid"/>
 
